[gd_scene load_steps=8 format=3 uid="uid://d0y113vt7xagl"]

[ext_resource type="Texture2D" uid="uid://bnaffre3vdplm" path="res://Textures/Raw/Shop.JPG" id="1_4c0d4"]
[ext_resource type="Script" path="res://UI/Elements/WorkshopElements/upgrade_item.gd" id="1_iy3bk"]
[ext_resource type="Texture2D" uid="uid://rmwllp0iqyf2" path="res://Textures/Raw/Button.png" id="2_bjyp3"]
[ext_resource type="FontFile" uid="uid://h8rhgl0terod" path="res://UI/Fonts/FontAdv_FD_128.fnt" id="2_h58b8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8cea7"]
resource_local_to_scene = true
atlas = ExtResource("2_bjyp3")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hyvv"]
resource_local_to_scene = true
atlas = ExtResource("1_4c0d4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_al3rt"]
blend_mode = 3

[node name="upgrade_item" type="HBoxContainer"]
custom_minimum_size = Vector2(191, 64)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.5
offset_top = -32.0
offset_right = 95.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("1_iy3bk")
upgrade_name = "Armor"

[node name="spacer2" type="Control" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="available_icon" type="Control" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="up_arrow" type="Sprite2D" parent="available_icon"]
z_index = 1
position = Vector2(0, 21)
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_8cea7")

[node name="icon" type="Control" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="icon_bg" type="ColorRect" parent="icon"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="icon_button" type="TextureButton" parent="icon"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
offset_right = 64.0
offset_bottom = 64.0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_2hyvv")

[node name="icon_blocked" type="Control" parent="icon"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="blocked_sprite" type="Sprite2D" parent="icon/icon_blocked"]
material = SubResource("CanvasItemMaterial_al3rt")
position = Vector2(32, 32)
texture = ExtResource("1_4c0d4")
region_enabled = true
region_rect = Rect2(0, 256, 64, 64)

[node name="spacer" type="Control" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="texts" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="name_label" type="Label" parent="texts"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h58b8")
theme_override_font_sizes/font_size = 18
text = "Armor"

[node name="price_label" type="Label" parent="texts"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h58b8")
theme_override_font_sizes/font_size = 18
text = "Price 100
"

[node name="state_label" type="Label" parent="texts"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.341176, 0.364706, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_h58b8")
theme_override_font_sizes/font_size = 18
text = "not enough money"

[connection signal="mouse_entered" from="icon/icon_button" to="." method="_on_icon_button_mouse_entered"]
[connection signal="mouse_exited" from="icon/icon_button" to="." method="_on_icon_button_mouse_exited"]
[connection signal="pressed" from="icon/icon_button" to="." method="_on_icon_button_pressed"]
